--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-
+#------------------------------------------------------------------------------------------------
+#直接在这里定义全局常量或者变量
+#这里只能定义key-value类型的值
+#变量名不能与gradle文件里已有的名字一样，例如不能定义一个属性叫compileSdkVersion
+isLoadTest=true
+appVersionCode=1
+appVersionName='1.0'
