--- a/config.gradle
+++ b/config.gradle
@@ -7,6 +7,8 @@ ext {
 
     dependence = [
             'appcompat-v7'     : 'com.android.support:appcompat-v7:27.1.1',
-            'constraint-layout': 'com.android.support.constraint:constraint-layout:1.1.3'
+            'constraint-layout': 'com.android.support.constraint:constraint-layout:1.1.3',
+            'support-v4'       : 'com.android.support:support-v4:27.1.1',
+            'okhttp3'          : 'com.squareup.okhttp3:okhttp:3.11.0'
     ]
 }
